--- a/index.html
+++ b/index.html
@@ -373,6 +373,37 @@
         </div>
       </div>
     </div>
+
+    <!-- Conference Poster -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Conference Poster</h2>
+        <div class="content has-text-justified">
+          <div style="text-align: center; margin: 2rem 0;">
+            <!-- PDF Embed -->
+            <div style="border: 2px solid #ddd; border-radius: 8px; background: white; display: inline-block; max-width: 100%;">
+              <embed src="poster.pdf" type="application/pdf" width="600" height="800" style="max-width: 100%;">
+            </div>
+            
+            <div style="margin-top: 1rem;">
+              <p class="caption"><b>Conference Poster:</b> Aligning Subjective and Objective Assessments in Super-Resolution Models</p>
+              
+              <!-- Download Button -->
+              <div style="margin-top: 1rem;">
+                <a href="poster.pdf" download="SCIA2025_SuperResolution_Poster.pdf" class="button is-primary is-large">
+                  <span class="icon"><i class="fas fa-download"></i></span>
+                  <span>Download Poster (PDF)</span>
+                </a>
+                <a href="poster.pdf" target="_blank" class="button is-info is-large" style="margin-left: 0.5rem;">
+                  <span class="icon"><i class="fas fa-external-link-alt"></i></span>
+                  <span>View Full Size</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
