--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-                <a href="#" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://link.springer.com/chapter/10.1007/978-3-031-95918-9_4" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon"><i class="ai ai-arxiv"></i></span>
                   <span>Paper</span>
                 </a>
