--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ isbn="978-3-031-95918-9"
           <h1 class="title is-1 publication-title">Aligning Subjective and Objective Assessments in <br> Super-Resolution Models</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://www.linkedin.com/in/hamzafer/">Muhammad Hamza Zafar</a><sup>1</sup>,</span>&nbsp;
+              <a href="https://www.linkedin.com/in/ihamzafer/">Muhammad Hamza Zafar</a><sup>1</sup>,</span>&nbsp;
             <span class="author-block">
               <a href="https://orcid.org/0000-0003-1150-2498">Jon Y. Hardeberg</a><sup>1</sup>
             </span>
